--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "prod": "cross-env NODE_ENV=production webpack --mode production",
-    "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
+    "dev": "cross-env NODE_ENV=development webpack --mode development --open",
+    "prod": "cross-env NODE_ENV=production webpack --mode production --open",
+    "watch": "cross-env NODE_ENV=development webpack --mode development --watch --open",
     "serve": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
   },
-  "browserslist": "> 0.25%, not dead",
+  "browserslist": [
+    "> 2%",
+    "last 2 versions",
+    "ie >= 9"
+  ],
   "keywords": [
-    "webpack"
+    "webpack template"
   ],
   "author": "Khramov Vladislav <khramovw@gmail.com>",
   "license": "ISC",
@@ -22,6 +26,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.0",
@@ -35,6 +40,7 @@
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "papaparse": "^5.1.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.3",
@@ -44,6 +50,8 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3"
+    "@babel/polyfill": "^7.8.3",
+    "autoprefixer": "^9.7.4",
+    "postcss-cli": "^7.1.0"
   }
 }
